# llm-toolkit

./: .gitignore  README.md  pyproject.toml  test_tools.py
llm_toolkit/: __init__.py  adapters.py  cli.py  constants.py  core.py  tool_loop.py  tool_types.py
llm_toolkit/tools/: calculator.py
tests/: test_core.py
